--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,20 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".BatteryService" android:exported="false" />
-        <receiver android:name=".PowerConnectionReceiver" android:enabled="true" android:exported="false">
+        <service
+            android:name=".BatteryService"
+            android:exported="false" />
+        
+        <receiver
+            android:name=".PowerConnectionReceiver"
+            android:enabled="true"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
             </intent-filter>
         </receiver>
+
     </application>
+
 </manifest>
